# SkillSarathiBackend

./: .env.example  .gitignore  CLEANUP_DONE.md  COMPLETION_SUMMARY.md  ENVIRONMENT_RESOLUTION.md  PRODUCTION_STATUS.md  README.md  SECURITY.md  SOLUTION_COMPLETE.md  SYSTEM_STATUS.md  VOICE_SERVICES.md  VOICE_SETUP_GUIDE.md  advanced_dashboard.py  advanced_interface.py  chat_demo.html  debug_apis.py  debug_murf.py  deploy_platform.sh  enhanced_backend.py  enhanced_multi_agent_backend.py  free_agent_llm.py  frontend_setup.md  main.py  main_simple.py  main_simple_fixed.py  multi_agent_app.py  production_architecture.py  pyproject.toml  requirements.txt  setup.sh  simple_backend.py  simple_interface.py  start_all_services.sh  start_server.sh  stop_services.sh  streamlit_test.py  test_all_features.py  test_audio_fix.py  test_backend.py  test_direct_apis.py  (+12 more)
app/: __init__.py  agent_orchestrator.py  ai_progress.py  main.py  main_old.py  mcp_integration.py  murf_streaming.py  murf_streaming_fixed.py  murf_streaming_new.py  murf_tts.py  voice_config.py  voice_performance.py  websocket_handler.py
app/agents/: base.py  multi_agent_system.py  skillsarathi_agents.py
app/api/: __init__.py  agents.py  ai_features.py  auth.py  candidates.py  chat.py  chat_router.py  chat_simple.py  chat_streaming.py  documents.py  documents_simple.py  enhanced_chat.py  enhanced_chat_simple.py  enhanced_endpoints.py  profiles.py  profiles_simple.py  user_router.py  video_router.py  voice.py  voice_backup.py  voice_router.py
app/api/routes/: enhanced_chat.py
app/auth/: auth.py  dependencies.py
app/core/: config.py  security.py
app/database/: base.py  models.py  models_new.py  models_old.py  schemas.py
app/llm/: __init__.py  azure_openai_service.py  github_llm.py  llm_factory.py  llm_factory_backup.py  llm_factory_new.py  streaming_llm.py
app/rag/: advanced_rag_system.py  enhanced_rag_system.py  rag_system.py
app/services/: azure_openai_service.py  video_interview_service.py
app/services/voice/: __init__.py  audio_optimizer.py  murf_service.py  murf_service_old.py  speech_recognition.py  voice_cache.py  voice_processor.py  voice_streaming.py
static/: README.css  placeholder.txt
streamlit_app/: README.md  app.py  install.sh  requirements.txt
streamlit_app/components/: video.py
streamlit_app/pages/: 1_🤗_Mitra.py  2_🎓_Guru.py  3_💼_Parikshak.py
streamlit_app/utils/: api_client.py  audio.py  config.py  session.py  session_new.py
